--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="profile.css">
+  <title>Portfolio</title>
 </head>
 <body>
-  
+<div class="navbar">
+  <ul class="navbar__list">
+    <li class="navbar__list-link-active"><a href="#">Home</a></li>
+    <li class="navbar__list-link"><a href="#">Project</a></li>
+    <li class="navbar__list-link"><a href="#">About</a></li>
+    <li class="navbar__list-link"><a href="#">Contact</a></li>
+  </ul>
+</div>
+  <script src="app.js"></script>
 </body>
 </html>
