--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="profile.css">
   <title>Portfolio</title>
+  <script src="https://kit.fontawesome.com/19d76fcd8c.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="navbar">
@@ -19,7 +20,7 @@
 <!--Home section-->
 <section class="home-section active">
   <h1 class="hero-heading">hello, i am <br> Aryan</h1>
-  <img src="./assets/home.png" class="home-img" alt="">
+  <img src="./assets/portfolio-img3.jpeg" class="home-img" alt="">
 </section>
 <!--Project section-->
   <section class="project-section">
@@ -60,7 +61,7 @@
 <section  class="about-section">
   <div class="about-content">
     <div class="about-img">
-      <img src="./assets/home.png" alt="">
+      <img src="./assets/portfolio-img3.jpeg" alt="" style="width: 40rem;">
     </div>
     <div class="about-para">
       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita fugit odit vero nihil explicabo. Odit facilis adipisci officia beatae nemo accusantium pariatur porro, impedit animi. Excepturi, minus? Perferendis repellat quasi explicabo iste eligendi reiciendis illum, maiores odit impedit natus tempore laudantium obcaecati recusandae sapiente cupiditate adipisci suscipit temporibus et omnis, numquam nemo. Eaque cum nihil quas, consequatur ea, ut odio fuga doloribus rerum ullam sit impedit nisi alias, modi dolores harum explicabo ratione error accusamus in animi et. In hic dolore nemo dolorem deleniti tempore odit? Facere quod dolor accusamus excepturi laborum, voluptates laudantium fugit, magni incidunt debitis, reiciendis officia!</p>
@@ -95,6 +96,10 @@
     </div>
   </div>
 </section>
+ <section class="contact-section">
+ <a href="https://github.com/MasterChief831"> <i class="fab fa-github-square" style="color: white; font-size: 10rem;margin-top: 10rem; opacity: 0.6;"></i></a>
+  <a href="https://www.linkedin.com/in/aryan-sharma-2a4831227/"><i class="fab fa-linkedin-in"  style="color: white; font-size: 10rem;margin-top: 10rem; margin-left: 10rem;opacity: 0.6;"></i></a>
+ </section>
 
 
 
