--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     </div>
     <div class="skill-card">
       <img src="./assets/c-logo-1.png" class="skill-img" alt="" style="opacity: 0.4;">
-      <div class="skill-level">30%</div>
-      <h1 class="skill-name">Javascript</h1>
+      <div class="skill-level">90%</div>
+      <h1 class="skill-name">CSS</h1>
       
   </div>
         
