--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="skill-card">
       <img src="./assets/c-logo-1.png" class="skill-img" alt="" style="opacity: 0.4;">
       <div class="skill-level">90%</div>
-      <h1 class="skill-name">CSS</h1>
+      <h1 class="skill-name">C++</h1>
       
   </div>
         
